# libgpiod

./: .gitignore  configure.ac
bindings/: Makefile.am
bindings/cxx/: Makefile.am  chip.cpp  chip.hpp  chip_iterator.cpp  chip_iterator.hpp  error.cpp  error.hpp  gpiodcxx-internal.hpp  line.cpp  line.hpp  line_event.cpp  line_event.hpp
bindings/cxx/examples/: Makefile.am  gpio_error.cpp
src/daemon/: Makefile.am  gpioctld.c
tests/tools/: Makefile.am  gpiodetect.test  runtests
