#
# Copyright (C) 2017 Bartosz Golaszewski <bartekgola@gmail.com>
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of version 2.1 of the GNU Lesser General Public License
# as published by the Free Software Foundation.
#

check: check-am
	@echo " ********************************************************"
	@echo " * The tools test suite is available at                 *"
	@echo " * tests/tools/runtests.                                *"
	@echo " *                                                      *"
	@echo " * Superuser privileges and at least linux kernel 4.11  *"
	@echo " * are required to execute the tests.                   *"
	@echo " ********************************************************"
